# Matrix_Multiplication_in_FPGA

./: Matrix_Multiplication_in_FPGA.xpr  README.md
C/: CMakeLists.txt  DoubleConversionToFPX.c  Makefile  compile_commands.json  generates_matrices.py  main.c  makefile  matrice_A.csv  matrice_B.csv
C/components/: adder.c  double_composer.h  inner_product.h  old_adder.c
C/test_functions/: case_manager.c  case_manager.h
MATLAB/: Codice matlab  bin_to_dec.m  dec_to_bin.m  double_to_float.m  float_to_double.m
Matrix_Multiplication_in_FPGA.ip_user_files/ip/c_mio_sommatore/: c_mio_sommatore.veo
Matrix_Multiplication_in_FPGA.runs/c_mio_sommatore_synth_1/: .vivado.begin.rst  c_mio_sommatore.dcp  c_mio_sommatore.vds  gen_run.xml  rundef.js  vivado.jou  vivado.pb
Matrix_Multiplication_in_FPGA.srcs/sources_1/new/: top.vhd
VHDL/: TB_MULTIPLIER_behav.wcfg  TB_TOP_behav.wcfg  VHDL.xpr  mem_B_init.coe
VHDL/VHDL.cache/sim/: ssm.db
VHDL/VHDL.cache/wt/: project.wpc  synthesis.wdf  webtalk_pa.xml
VHDL/VHDL.runs/.jobs/: vrs_config_1.xml  vrs_config_3.xml  vrs_config_4.xml
VHDL/VHDL.runs/blk_mem_gen_0_synth_1/: .vivado.begin.rst  blk_mem_gen_0.tcl  blk_mem_gen_0.vds  blk_mem_gen_0_utilization_synth.pb  blk_mem_gen_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  project.wdf  rundef.js  runme.sh  vivado.jou  vivado.pb
VHDL/VHDL.runs/impl_1/: .place_design.begin.rst  .vivado.begin.rst  TOP.tcl  TOP.vdi  TOP_bus_skew_routed.rpt  TOP_bus_skew_routed.rpx  TOP_clock_utilization_routed.rpt  TOP_control_sets_placed.rpt  TOP_drc_opted.rpt  TOP_drc_opted.rpx  TOP_drc_routed.rpt  TOP_drc_routed.rpx  TOP_io_placed.rpt  TOP_methodology_drc_routed.rpt  TOP_methodology_drc_routed.rpx  TOP_opt.dcp  TOP_power_routed.rpt  TOP_power_summary_routed.pb  TOP_route_status.pb  TOP_route_status.rpt  TOP_timing_summary_routed.rpt  TOP_utilization_placed.pb  TOP_utilization_placed.rpt  clockInfo.txt  gen_run.xml  htr.txt  init_design.pb  opt_design.pb  phys_opt_design.pb  place_design.pb  project.wdf  route_design.pb  rundef.js  runme.sh  vivado.jou  vivado.pb
VHDL/VHDL.runs/synth_1/: TOP.dcp  (+11 more)
Vivado/: Matrix_Multiplication_in_FPGA.xpr
old_C/: DoubleConversionToFPX.c  makefile
old_VHDL/: old_VHDL.xpr
precisionVerificationProgram/: DoubleConversionToFPX.c
topdown_C/: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  main.c
topdown_C/components/: CMakeLists.txt  adder.c  adder.h  double_composer.c  double_composer.h  inner_product.c  inner_product.h  multiplier.c  multiplier.h
topdown_C/test_functions/: CMakeLists.txt  case_manager.c  case_manager.h  debug_function.c  debug_function.h
(+286 files in other folders)
